--- a/DirRX.ApprovalAssignmentEscalation/DirRX.ApprovalAssignmentEscalation.Shared/ModuleSystem.ru.resx
+++ b/DirRX.ApprovalAssignmentEscalation/DirRX.ApprovalAssignmentEscalation.Shared/ModuleSystem.ru.resx
@@ -121,6 +121,6 @@
     <value>Эскалация заданий на согласование</value>
   </data>
   <data name="JobDescription_5433fa357318405690f695f0e04a1bc6" xml:space="preserve">
-    <value>Эскалирует задание на на соглаосвание руководителю исполнителя</value>
+    <value>Эскалирует задание на согласование руководителю исполнителя</value>
   </data>
 </root>
