--- a/DirRX.Escalation/DirRX.Escalation.Shared/ModuleSystem.ru.resx
+++ b/DirRX.Escalation/DirRX.Escalation.Shared/ModuleSystem.ru.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="JobDisplayName_5433fa357318405690f695f0e04a1bc6" xml:space="preserve">
-    <value>Эскалация заданий на согласование</value>
+    <value>Эскалация заданий</value>
   </data>
   <data name="JobDescription_5433fa357318405690f695f0e04a1bc6" xml:space="preserve">
-    <value>Эскалирует задание на согласование руководителю исполнителя</value>
+    <value>Эскалирует задание руководителю исполнителя.</value>
   </data>
 </root>
