исправления после ревью

--- a/DirRX.Escalation/DirRX.Escalation.Shared/ModuleSystem.ru.resx
+++ b/DirRX.Escalation/DirRX.Escalation.Shared/ModuleSystem.ru.resx
@@ -71,6 +71,6 @@
     <value>AsyncHandler</value>
   </data>
   <data name="AsyncHandler_Description_1b5617e6a34644f0ad61ff7dc27e70ec" xml:space="preserve">
-    <value>Отправить уведомление об экскалации задания</value>
+    <value>Отправить уведомление об эскалации задания</value>
   </data>
 </root>
